[package]
name = "plantill"
description = "Basic templater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["completion"] }
shellexpand = "3.1.0"
toml = "0.8.6"
